<resources>
    <string name="app_name">AppStatistics</string>

    <string name="login_title">Login</string>
    <string name="font_family">monospace</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="signIn_button">SignIn</string>
    <string name="register_button">Register</string>
    <string name="registration_text">Registration</string>
    <string name="Forgot_password">Forgot Password?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nipcyns">No internet, please check your internet settings</string>
    <string name="isr">Invalid server response</string>
    <string name="sct">Server connection timeout.!</string>
    <string name="snr1">Server not reachable.!</string>
    <string name="iurl">Invalid URL</string>
    <string name="snr2">Server not reachable.!!</string>
    <string name="snr3">Server not reachable.!!!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">112290272813739</string>
    <string name="fb_login_protocol_scheme">fb112290272813739</string>
    <string name="nav_scanqrcode">Scan QRCode</string>
    <string name="nav_notifications">Notifications</string>
    <string name="description">Description</string>
    <string name="serialno">s no </string>
    <string name="expdate">expdate</string>
    <string name="enter_uname">Enter Username</string>
    <string name="enter_pword">Enter Password</string>
    <string name="enter_pnumber">Enter Phonenumber</string>
    <string name="enter_email">Enter Email</string>
    <string name="welcome">Welcome</string>


    <string name="logout">Logout</string>
</resources>
